# game.libretro.chailove

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright
depends/common/beetle-bsnes/: 0001-makefile-linux-Fix-missing-linker-flag-ldl.patch  0001_Fix_loading_error_if_save_files_dont_exist.patch  CMakeLists.txt  beetle-bsnes.txt  chailove.txt
depends/common/chailove/: CMakeLists.txt  chailove.txt
game.libretro.beetle-bsnes/: addon.xml  addon.xml.in  buttonmap.xml
game.libretro.chailove/: addon.xml.in
game.libretro.chailove/resources/: buttonmap.xml  settings.xml  topology.xml
game.libretro.chailove/resources/language/English/: strings.po
game.libretro.chailove/resources/language/resource.language.af_za/: strings.po
game.libretro.chailove/resources/language/resource.language.am_et/: strings.po
game.libretro.chailove/resources/language/resource.language.ar_dz/: strings.po
game.libretro.chailove/resources/language/resource.language.ar_sa/: strings.po
game.libretro.chailove/resources/language/resource.language.ast_es/: strings.po
game.libretro.chailove/resources/language/resource.language.az_az/: strings.po
game.libretro.chailove/resources/language/resource.language.be_by/: strings.po
game.libretro.chailove/resources/language/resource.language.bg_bg/: strings.po
game.libretro.chailove/resources/language/resource.language.bs_ba/: strings.po
game.libretro.chailove/resources/language/resource.language.ca_es/: strings.po
(+81 files in other folders)
